Additional unit test functions for rings